Makes sure the onSurroundingTextChanged event is sent after onFocus event.

BUG=919011

Change-Id: I0f4d83244dabb164a345f1239e6bd9982dfe9cff
Reviewed-on: https://chromium-review.googlesource.com/c/1391657
Commit-Queue: Shu Chen <shuchen@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619902}
Former-commit-id: c42d9f0f9e1f87a40a14a05ba35dd9864146bf09