ui/views/controls/textfield/textfield.cc
@@ -354,9 +354,9 @@ void Textfield::SetReadOnly(bool read_only) {
 void Textfield::SetTextInputType(ui::TextInputType type) {
   GetRenderText()->SetObscured(type == ui::TEXT_INPUT_TYPE_PASSWORD);
   text_input_type_ = type;
-  OnCaretBoundsChanged();
   if (GetInputMethod())
     GetInputMethod()->OnTextInputTypeChanged(this);
+  OnCaretBoundsChanged();
   SchedulePaint();
 }
 
